Use Java 25 features